# rust-gpu

./: Cargo.toml  README.md
guide/: Cargo.toml
guide/src/: inference.rs  main.rs  model.rs  training.rs
my_burn_app/: Cargo.toml
my_burn_app/src/: main.rs
src/: lib.rs  main.rs
website/: app.py  build_wasm.sh  pyproject.toml
website/static/: wasm-demo.js
