[package]
name = "guide"
version = "0.1.0"
edition = "2024"

[dependencies]
# Disable autotune default for convolutions
burn = { version = "~0.19", features = [
    "std",
    "tui",
    "train",
    "vision",
    "wgpu",
    "fusion",
], default-features = false }
# burn = { version = "~0.19", features = ["train", "vision", "wgpu"] }
